--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Tragedies'
 - !lcc 'PG'
 - !lcsh 'Drama'
+- GITenberg
 title: 'Aspazio: Tragedio en Kvin Aktoj'
 url: http://www.gutenberg.org/ebooks/45713
